# intentc

./: .gitignore  BUILD_LOG.md  CLAUDE.md  README.md  TODO.md  bootstrap.sh  duplication.md  go.mod  go.sum  main.go  package-lock.json  pyproject.toml  running_bugs.md
src/: .intentc-build-build_agents-1262e28a.json  .intentc-build-build_state-6ca9050d.json  .intentc-build-build_validations-bf1e02be.json  .intentc-build-core_project-802e4a39.json  .intentc-build-differencing-707a588a.json  .intentc-val-agent-difference-method-ed001311.json  .intentc-val-agent-interface-defined-2a04a52f.json  .intentc-val-agent-module-exists-7d6a1695.json  .intentc-val-agent-tests-pass-2366bc00.json  .intentc-val-build-log-append-only-d84f39de.json  .intentc-val-dag-aware-operations-3f2cd2a3.json  .intentc-val-differencing-prompt-rendered-1c038b8a.json  .intentc-val-differencing-response-parsing-5b795fbd.json  .intentc-val-differencing-tests-pass-974c055e.json  .intentc-val-differencing-workflow-implemented-6263a358.json  .intentc-val-runner-registry-extensibility-d6f3a425.json  .intentc-val-state-roundtrip-2b462ff8.json  .intentc-val-state-types-and-interfaces-1e8ccb09.json  .intentc-val-validation-suite-lifecycle-5e3f7b15.json  pyproject.toml  types.go
src/agent/: __init__.py  agent.py  base.py  claude.go  claude_agent.py  claude_test.go  cli.go  cli_agent.py  cli_factory_test.go  cli_test.go  codex_agent.py  factory.go  factory.py  interface.go  mock.go  mock.py  mock_agent.py  models.py  prompts.py  template_utils.go  templates.go  test_agent.py  types.py
src/builder/: __init__.py  build_directory_integration_test.go  builder.go  builder.py  builder_test.go  test_builder.py
src/cleaner/: cleaner.go  cleaner_test.go
src/cli/: __init__.py  main.py  test_cli.py
src/cmd/: add.go  build.go  check.go  clean.go  commit.go  commit_test.go  config.go  decompile.go  help.go  init.go  init_test.go  intent.go  refine.go  refine_test.go  root.go  status.go  utils.go  validate.go  validation.go  validation_test.go
src/config/: __init__.py  config.go  config.py  config_test.go  test_config.py
src/core/: __init__.py  test_core.py  types.py
src/editor/: agent_bridge.py  api.py  server.py  test_editor.py  watcher.py
src/git/: __init__.py  git.go  interface.go  manager.py  noop.go  test_git.py
src/graph/: __init__.py  dag.py  test_graph.py
src/intent/: dag.go  dag_test.go  parser.go  parser_test.go  project.ic  registry.go  registry_test.go  target.go  target_test.go
src/logger/: logger.go
src/parser/: __init__.py  intent.go  intent_test.go  markdown_utils.go  (+5 more)
(+367 files in other folders)
