[project]
name = "intentc"
version = "0.1.0"
description = "A compiler of intent - transforms specs into working code using AI agents"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.scripts]
intentc = "intentc.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intentc"]

[tool.pytest.ini_options]
testpaths = ["src"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]
